# codemark

./: .gitignore  Cargo.toml  README.md  build.rs  index.html  release.sh  test_debug.rs
.github/workflows/: test.yml
docs/: CLI.md  audit.md  config.default.toml  configuration.md  database-schema.md  open-command-spec.md  templates.md
docs/guides/: agent-workflow-walkthrough.md  sqlite-debug-queries.md  tree-sitter-local-setup.md
docs/requirements/: 01-overview.md  02-functional-requirements.md  03-technical-architecture.md  04-cli-specification.md  05-data-model.md  06-query-generation.md  07-hook-integration.md  08-implementation-phases.md  09-bookmark-creation-improvements.md  10-semantic-search.md  11-human-readable-headlines.md
extras/: config.example.toml  install-vec0.sh  tv-channel-bookmarks.toml  tv-channel-collections.toml  tv-codemark-collection
extras/claude-code-plugin/: plugin.json
extras/claude-code-plugin/skills/: codemark  codemark.md
extras/neovim-plugin/: README.md
extras/neovim-plugin/lua/codemark/: init.lua
extras/neovim-plugin/plugin/: codemark.vim
extras/skills/codemark/: SKILL.md  examples.md  templates.md
extras/skills/codemark/queries/: common.md  csharp.md  dart.md  go.md  java.md  python.md  rust.md  swift.md  typescript.md
man/: codemark-add-from-query.1  codemark-add-from-snippet.1  codemark-add.1  codemark-collection-add.1  codemark-collection-create.1  codemark-collection-delete.1  codemark-collection-list.1  codemark-collection-remove.1  codemark-collection-reorder.1  codemark-collection-resolve.1  codemark-collection-show.1  codemark-collection.1  codemark-diff.1  codemark-export.1  codemark-gc.1  codemark-heal.1  codemark-import.1  codemark-list.1  codemark-preview.1  codemark-reindex.1  codemark-remove.1  codemark-resolve.1  codemark-search.1  codemark-show.1  codemark-status.1  codemark.1
migrations/: 001_initial.sql  002_add_fts.sql  003_collection_ordering.sql  004_add_line_range.sql  005_add_embeddings.sql  006_add_fts_path_tags.sql  007_append_only_metadata.sql
src/: config.rs  error.rs  lib.rs  main.rs
src/cli/: handlers.rs  mod.rs  output.rs  templates.rs
src/embeddings/: config.rs  local.rs  mod.rs  provider.rs  vec_store.rs
src/engine/: bookmark.rs  hash.rs  health.rs  mod.rs  resolution.rs
src/git/: context.rs
src/parser/: languages.rs
src/query/: generator.rs  matcher.rs  mod.rs  relaxer.rs
src/storage/: bookmark_repo.rs  collection_repo.rs  db.rs  mod.rs  resolution_repo.rs  semantic_repo.rs
tests/: cli_integration.rs
tests/fixtures/: README.md
tests/fixtures/csharp/: AuthService.cs
tests/fixtures/dart/: auth_service.dart
tests/fixtures/go/: auth_service.go
tests/fixtures/java/: AuthService.java
tests/fixtures/kotlin/: AuthService.kt
tests/fixtures/python/: auth_service.py
tests/fixtures/rust/: api_client.rs  auth_service.rs
tests/fixtures/swift/: api_client.swift  auth_service.swift  data_models.swift
tests/fixtures/typescript/: auth_service.ts
